# rails-migration-assistant

./: .env.example  .gitattributes  .gitignore  API.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  FINAL_STATUS_REPORT.md  GITHUB_READY_STATUS.md  ORGANIZATION_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELEASE_INFO.json  api_bridge.py  launcher.py  prepare_for_github.py  pyproject.toml  rails_migration_assistant.py  rails_upgrade_agent.py  rails_upgrade_gui.py  rails_upgrade_suggestions.py  regenerate_data.py  requirements.txt  setup.py  start.bat  start.sh  test_complete_system.py  test_simple_fix.py
.github/workflows/: ci.yml
data/raildiff/: 4.0.13_to_4.1.16.json  4.1.16_to_4.2.11.json  4.2.11_to_5.0.0.json  5.0.0_to_5.1.7.json  5.1.7_to_5.2.6.json  5.2.6_to_6.0.0.json  6.0.0_to_6.1.7.json  6.1.7_to_7.0.8.json  7.0.8_to_7.1.0.json
demos/: README.md  demo_search.py  rails_upgrade_demo.py  rails_upgrade_enhanced_demo.py
docs/: DEDUPLICATION_ANALYSIS.md  GUI_EXAMPLES.md  GUI_README.md  README.md  RESULTS.md  SAFETY_IMPROVEMENTS.md  STATUS_REPORT.md
examples/: README.md  rails_deduplication_plan.json
frontend/: debug.html  index.html  main.js  package-lock.json  package.json  preload.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AppHeader.jsx
frontend/src/pages/: ProjectMode.jsx  QueryMode.jsx  WelcomePage.jsx
frontend/src/services/: apiClient.js
frontend/src/stores/: appStore.js
sample_rails_upgrade/: Gemfile
sample_rails_upgrade/app/controllers/: application_controller.rb  users_controller.rb  vulnerable_controller.rb
sample_rails_upgrade/app/views/layouts/: application.html.erb
sample_rails_upgrade/config/: application.rb  routes.rb
sample_rails_upgrade/config/environments/: development.rb
scripts/: README.md  inventory_docs.py
src/: cli.py
src/analyzer/: __init__.py  agent_runner.py  code_parser.py  diff_detector.py  enhanced_agent_runner.py  hybrid_analyzer.py  project_scanner.py
src/ingest/: __init__.py  docs_fetcher.py  raildiff_fetcher.py  raildiff_ingest.py  smart_docs_fetcher.py
src/model/: __init__.py  gemini_llm.py  local_llm.py
src/patcher/: __init__.py  suggestion_formatter.py
src/retriever/: __init__.py  build_index.py  chunk_docs.py  retriever.py
tests/: README.md  __init__.py  diagnostic.py  test_basic.py  test_gemini.py  test_knowledge.py  test_knowledge_base.py  test_rails_upgrade_agent.py  test_retriever.py  test_timeout_improvements.py  test_upgrade.py
tools/: README.md  analyze_guides.py  debug_raildiff.py  deduplicate_docs.py  project_summary.py
